# lead-nurture-agent

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  config.py  main.py  models.py  scheduler.py  storage.py  workflow.py
app/adapters/: __init__.py  base.py  close.py
app/data/: jobs.json  leads.json  logs.json
app/routes/: api.py  ui.py
app/sequences/: booked_call.json  lead_nurture.json  welcome_test.json
app/services/: __init__.py  email_service.py  sms_service.py
app/templates/: _dashboard.html  _jobs.html  _leads.html  _logs.html  _template_edit.html  _template_preview.html  _templates.html  confirmation_email.html  index.html  nurture_book_call_email.html  nurture_case_study_email.html  nurture_intro_email.html  reminder_1h_sms.txt  reminder_24h_email.html  value_followup_email.html  welcome_test_email.html
