[project]
name = "lead-nurture-agent"
version = "0.1.0"
description = "Deterministic, config-driven lead nurture automation platform."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
